--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,77 @@
-.App {
-  text-align: center;
+* {
+  box-sizing: border-box;
+  margin: 0px;
+  outline: none;
+  padding: 0px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body {
+  font-family: sans-serif;
+  background: #333;
+  color: #ffffff;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+h2 {
+  background-color: rgb(7, 35, 61);
   color: white;
+  margin: 20px 10px;
+  padding: 20px 30px;
+  cursor: pointer;
+}
+.title {
+  color: white;
+  margin: auto;
+  text-align: center;
+  margin-top: 25px;
+  margin-bottom: 30px;
 }
 
-.App-link {
-  color: #61dafb;
+.input_section {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+input {
+  width: 100%;
+  max-width: 40rem;
+  margin: 0em 4rem;
+  height: 3rem;
+  text-align: center;
+  border: none;
+  background-color: rgb(255, 255, 255);
+  font-weight: 600;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+input:focus {
+  outline: none;
+  border: 3px solid hsla(220, 100%, 50%, 80%);
+}
+
+.heading_section {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 2rem 0rem;
+  color: #ffffff;
+}
+
+.selected_section {
+  background-color: darkblue;
+  padding: 1rem;
+  font-weight: 600;
+}
+
+.emoji_list {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+@media screen and (max-width: 760px) {
+  .emoji_list {
+    width: 100%;
+    display: block;
   }
 }
